Fixed CSS w/ Framing Videos on Mobile (?)

--- a/css/main.css
+++ b/css/main.css
@@ -2605,5 +2605,24 @@ footer .copyright span:last-child::after {
   object-fit: contain;
 }
 
+.video-wrapper {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 ratio */
+    height: 0;
+    overflow: hidden;
+    border-radius: 8px; /* optional */
+}
+
+.video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+
 
 /*# sourceMappingURL=main.css.map */
